--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
         user-select: none;
       }
       
-      /* Global Neon Glow Effect */
-      body::before {
-        content: "";
-        position: fixed;
-        inset: 0;
-        pointer-events: none;
-        box-shadow: inset 0 0 100px rgba(220, 38, 38, 0.05);
-        z-index: 9999;
-      }
+      /* Global Glow Removed for Stability and Clean Black Background */
 
       ::-webkit-scrollbar { display: none; }
       * { scrollbar-width: none; -webkit-tap-highlight-color: transparent; box-sizing: border-box; }
